--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -6,6 +6,7 @@
 
     <script src="./vendors/angular.min.js" type="text/javascript"></script>
     <script src="./assests/scripts/client.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./style/style.css">
 
   </head>
   <body>
@@ -14,6 +15,22 @@
       <ul>
         <li ng-repeat="recipe in vm.recipes track by $index">{{recipe}}</li>
       </ul>
+
+      <h4>Add New</h4>
+      <div id="stylized" class="myform">
+        <form>
+          <label for="name"> Name:
+            <input id="name" type="text">
+          </label>
+          <label for="note"> Notes:
+            <textarea id="note" type="textarea"></textarea>
+          </label>
+          <label for="url"> URL:
+            <input id="url" type="text">
+          </label>
+          <input type="button" name="name" value="Add new">
+        </form>
+      </div>
     </div>
   </body>
 </html>
