--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -6,7 +6,8 @@
 
     <script src="./vendors/angular.min.js" type="text/javascript"></script>
     <script src="./assests/scripts/client.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="./style/style.css">
+    <!-- <link rel="stylesheet" href="./style/style.css"> -->
+    <link rel="stylesheet" href="./style/style-sass.min.css">
 
   </head>
   <body>
@@ -22,12 +23,11 @@
           <label for="name"> Name:
             <input id="name" type="text">
           </label>
-          <label for="note"> Notes:
-            <textarea id="note" type="textarea"></textarea>
-          </label>
           <label for="url"> URL:
             <input id="url" type="text">
           </label>
+          <label for="note"> Notes:</label>
+          <textarea id="note" type="textarea"></textarea>
           <input type="button" name="name" value="Add new">
         </form>
       </div>
